<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.manishchawley.computehelper.render.CommuterListActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/activity_commuter_list_appbar"
        android:layout_width="match_parent"
        android:layout_height="40dp">

        <android.support.v7.widget.GridLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            app:columnCount="3"
            app:rowCount="1"
            app:alignmentMode="alignBounds">

        <TextView
            android:id="@+id/activity_commuter_list_explore"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:gravity="center"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1"
            android:text="@string/commuter_list_explore"
            app:layout_gravity="fill|center"/>

        <TextView
            android:id="@+id/activity_commuter_list_invite"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:gravity="center"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1"
            android:text="@string/commuter_list_invite"
            app:layout_gravity="fill|center"/>

        <TextView
            android:id="@+id/activity_commuter_list_match"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:gravity="center"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1"
            android:text="@string/commuter_list_match"
            app:layout_gravity="fill|center"/>

        </android.support.v7.widget.GridLayout>

    </android.support.design.widget.AppBarLayout>


    <ImageView
        android:id="@+id/activity_commuter_list_nocommuter_imageview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        />

    <ListView
        android:id="@+id/activity_commuter_list_listview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/activity_commuter_list_appbar"/>


</RelativeLayout>
